style(client): fix creator border color in dark mode

--- a/client/src/styles/partials/_main.scss
+++ b/client/src/styles/partials/_main.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .creator {
-    border: 2px solid #212529;
+    border: 2px solid var(--bs-body-color);
     border-radius: 1.5rem;
     width: 2rem;
     height: 2rem;
